# paxakos

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/chat/: Cargo.toml  main.rs
examples/chat/src/: main.rs
examples/playground/: Cargo.toml  README.md
examples/playground-wasm/: .prettierrc.toml  Cargo.toml
examples/playground-wasm/src/: index.html
examples/playground/src/: index.html  lib.rs  main.rs
paxakos/: Cargo.toml
paxakos/src/: append.rs  applicable.rs  autofill.rs  buffer.rs  catch_up.rs  cluster.rs  communicator.rs  decoration.rs  delegate.rs  error.rs  event.rs  executor.rs  heartbeats.rs  invocation.rs  lib.rs  log.rs  log_entry.rs  retry.rs  state.rs  tracer.rs  util.rs  verify.rs  voting.rs
paxakos/src/deco/: auto_fill_gaps.rs  ensure_leadership.rs  fill_gaps.rs  mod.rs  send_heartbeats.rs  track_leadership.rs
paxakos/src/leadership/: ensure.rs  mod.rs  track.rs
paxakos/src/leases/: leaser.rs  mod.rs  releaser.rs
paxakos/src/leases/master/: communicator.rs  mod.rs  voter.rs
paxakos/src/locking/: locker.rs  mod.rs  release_locks.rs
paxakos/src/node/: builder.rs  commits.rs  core.rs  handle.rs  info.rs  inner.rs  kernel.rs  mod.rs  req_handler.rs  shell.rs  shutdown.rs  snapshot.rs  status.rs
paxakos/src/node/state_keeper/: error.rs  handle.rs  io.rs  macros.rs  mod.rs  msg.rs  working_dir.rs
paxakos/src/prototyping/: mod.rs
paxakos/tests/: builder.rs  gaps.rs  passive.rs  shutdown.rs  single_node.rs  stress.rs
paxakos/tests/calc_app/: mod.rs
paxakos/tests/tracer/: mod.rs
src/: append.rs  cluster.rs  communicator.rs  error.rs  event.rs  lib.rs  log.rs  state.rs  tracer.rs
src/deco/: auto_fill_gaps.rs  mod.rs
src/node/: builder.rs  commits.rs  handle.rs  info.rs  inner.rs  kernel.rs  mod.rs  req_handler.rs  shutdown.rs  snapshot.rs  status.rs
src/node/state_keeper/: error.rs  handle.rs  io.rs  mod.rs  msg.rs  working_dir.rs
src/prototyping/: mod.rs
tests/: Cargo.toml  builder.rs  gaps.rs  shutdown.rs  single_node.rs  stress.rs
tests/src/: lib.rs
tests/tests/: builder.rs  gaps.rs  passive.rs  shutdown.rs  single_node.rs  stress.rs
tests/tests/calc_app/: mod.rs
tests/tests/tracer/: mod.rs
tests/tracer/: mod.rs
