[package]
name = "chat"
version = "0.0.0"
authors = ["Ben Schulz <benshu@benshu.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
paxakos = { path = "../../paxakos", features = [ "prototyping" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
