[package]
name = "chat"
version = "0.0.0"
authors = ["Ben Schulz <benshu@benshu.de>"]
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
paxakos = { path = "../../paxakos", features = [ "prototyping" ] }
serde = { version = "1", features = [ "derive" ] }
uuid = { version = "1", features = [ "serde", "v4" ] }
