[package]
name = "playground"
version = "0.0.0"
authors = ["Ben Schulz <benshu@benshu.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
futures-timer = "3"
paxakos = { path = "../../paxakos", features = [ "autofill", "ensure-leadership", "heartbeats", "prototyping" ] }
rand_distr = "0.4"
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
serde = "1"
serde_json = "1"
tokio-util = { version = "0.7", features = [ "io" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
