[package]
name = "playground"
version = "0.0.0"
authors = ["Ben Schulz <benshu@benshu.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
js-sys = "0.3"
paxakos = { path = "../../paxakos", features = [ "autofill", "catch-up", "ensure-leadership", "heartbeats", "prototyping", "track-leadership", "verify", "wasm-bindgen" ] }
rand = "0.8"
rand_distr = "0.4"
serde = "1"
uuid = { version = "1", features = [ "js", "serde", "v4" ] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "console" ] }
